--- a/structural-equation-models.qmd
+++ b/structural-equation-models.qmd
@@ -1806,4 +1806,10 @@ anova(
   scalarInvariance_fit,
   residualInvariance_fit
 )
+
+round(cbind(
+  configural = inspect(configuralInvarianceCorrelatedResiduals_fit, "fit.measures"), 
+  weak = inspect(metricInvariance_fit, "fit.measures"),
+  strong = inspect(scalarInvariance_fit, "fit.measures"),
+  strict = inspect(residualInvariance_fit, "fit.measures")), 3)
 ```
