--- a/missing-data.qmd
+++ b/missing-data.qmd
@@ -11,6 +11,7 @@ library("mice")
 library("miceadds")
 library("micemd")
 library("lme4")
+library("broom.mixed")
 library("lavaan")
 library("lavaan.mi")
 library("psych")
